<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_snackbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/lv_footer"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login_using"
                    android:textSize="@dimen/margin20" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin10"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/login_button_fb"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/fb_tq" />

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <ImageView
                        android:id="@+id/btn_login_linkedIn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/linkedin_con" />

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>


                    <ImageView
                        android:id="@+id/btn_sign_in"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/google_tq" />


                    <ImageView
                        android:id="@+id/btn_login_twitter1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="-5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/twiter_icon" />
                </LinearLayout>

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/btn_login_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin10"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="@dimen/margin10"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.facebook.login.widget.LoginButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="@dimen/margin5"
                        android:layout_marginRight="@dimen/margin5"
                        android:layout_weight="1" />


                    <com.google.android.gms.common.SignInButton
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="@dimen/margin10"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin5"
                        android:layout_marginRight="@dimen/margin5"
                        android:layout_weight="1"
                        android:contentDescription="@string/linedin"
                        android:scaleType="fitXY"
                        android:src="@drawable/in" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/margin5"
                        android:layout_marginStart="@dimen/margin5"
                        android:layout_weight="1"
                        android:contentDescription="@string/twitterlogin"
                        android:scaleType="fitXY"
                        android:src="@drawable/t" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/textColor_lbl" />

                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/textcolor_input"
                    android:textSize="15dp" />

                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/textColor_lbl" />

            </LinearLayout>


            <sa.upscale.coworking.CustomFont.MyeditText
                android:id="@+id/edt_login_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin10"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/margin10"
                android:paddingRight="@dimen/margin10"
                android:paddingStart="@dimen/margin10"
                android:textColor="@color/textcolor_input" />


            <sa.upscale.coworking.CustomFont.MyeditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin10"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/margin10"
                android:paddingRight="@dimen/margin10"
                android:paddingStart="@dimen/margin10"
                android:textColor="@color/textcolor_input" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/margin10">


                <sa.upscale.coworking.CustomFont.MycheckBox
                    android:id="@+id/chk_loginKeepme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/keep_me_logged_in"
                    android:textColor="@color/textcolor_input" />

                <sa.upscale.coworking.CustomFont.MytextView
                    android:id="@+id/tv_forgotPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin5"
                    android:text="@string/forgotPwd"
                    android:textColor="@color/textcolor_input" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin20"
                android:layout_marginTop="@dimen/margin20"
                android:orientation="vertical">


                <sa.upscale.coworking.CustomFont.Mybutton
                    android:id="@+id/btn_login_signin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/button_color"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <sa.upscale.coworking.CustomFont.Mybutton
                    android:id="@+id/btn_login_signup"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="@dimen/margin10"
                    android:background="@color/light_gray"
                    android:text="@string/not_registered_yet_sign_up_here"
                    android:textAllCaps="false"
                    android:textColor="@color/textcolor_input"
                    android:textSize="16dp" />

                <LinearLayout
                    android:id="@+id/btn_login_listurSpace"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin10"
                    android:layout_marginTop="@dimen/margin10"
                    android:background="@color/button_color"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <sa.upscale.coworking.CustomFont.MytextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="-10dp"
                        android:text="@string/list_your_space"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/lv_footer"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/google_banner_add">
        </com.google.android.gms.ads.AdView>

        <ViewFlipper
            android:id="@+id/flipper_add"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:flipInterval="4000"
            android:inAnimation="@anim/slide_in_right"
            android:outAnimation="@anim/slide_out_left">

        </ViewFlipper>


    </RelativeLayout>
</RelativeLayout>
