<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="sa.upscale.coworking.MettingRoom.ThankYou">

    <!--<include layout="@layout/toolbar_layout" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lv_footer"
        android:layout_alignParentTop="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_thankyou_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:src="@drawable/close" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_thankyou_facebook"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo1" />

                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin10"
                    android:gravity="center"
                    android:text="@string/thank_you"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp" />

                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/for_booking_through_hive_application"
                    android:textColor="@color/textcolor_input"
                    android:textSize="15dp" />

                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/if_you_want_to_contact_us_please_reach_us"
                    android:textColor="@color/textcolor_input"
                    android:textSize="15dp" />


                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_hive_sa"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:textStyle="bold" />


                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/booking_ref_number"
                    android:textColor="@color/textcolor_input"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <sa.upscale.coworking.CustomFont.MytextView
                    android:id="@+id/tv_referal_no"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="fdxcyjslfd"
                    android:textColor="@color/black"
                    android:textSize="15dp" />


                <sa.upscale.coworking.CustomFont.MytextView
                    android:id="@+id/tv_invite"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin5"
                    android:background="@color/textColor_lbl"
                    android:gravity="center"
                    android:text="@string/invite_attendees"
                    android:textColor="@color/black"
                    android:textSize="15dp" />


                <sa.upscale.coworking.CustomFont.MytextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin20"
                    android:text="@string/sharing_with_social_media"
                    android:textColor="@color/textcolor_input"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/login_button_fb"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/fb_tq" />

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <ImageView
                        android:id="@+id/btn_login_linkedIn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/linkedin_con"
                        android:visibility="gone" />


                    <ImageView
                        android:id="@+id/img_thankyou_googlePlus"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="@dimen/margin10"
                        android:src="@drawable/google_tq" />


                    <ImageView
                        android:id="@+id/img_thankyou_twitter"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="-5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/twiter_icon" />
                </LinearLayout>


            </LinearLayout>
        </FrameLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lv_footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/google_banner_add">
        </com.google.android.gms.ads.AdView>


        <ViewFlipper
            android:id="@+id/flipper_add"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:flipInterval="4000"
            android:inAnimation="@anim/slide_in_right"
            android:outAnimation="@anim/slide_out_left">

        </ViewFlipper>

    </LinearLayout>

</RelativeLayout>
